<resources>
    <string name="app_name">BASKET</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Shop</string>
    <string name="menu_history">Order History</string>
    <string name="menu_fav">Favorites</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_faq">FAQ\'s</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_share">Share</string>
    <string name="menu_terms">Terms &amp; Conditions</string>
    <string name="_2018_basket_all_rights_reserved">© 2018 Basket. All rights reserved.</string>
    <string name="enter_your_email_password"> Enter your email &amp; password</string>
    <string name="user_name_email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="new_to_basket_sign_up">New to Basket ?<font color='#6F42D3'> Sign Up</font></string>
    <string name="log_in_with_facebook">Login with Facebook</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="lets_login">Lets Login</string>
    <string name="hello">Hello,</string>
    <string name="sign_up">Sign Up !</string>
    <string name="create_an_account">Create an Account</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">REGISTER</string>
    <string name="already_have_account_sign_in">Already have account ? <font color='#6F42D3'>Sign In</font> \n Skip</string>
    <string name="search_here_products">Search</string>
    <string name="top_products">Top Products</string>
    <string name="latest_arrivals">Latest Arrivals</string>
    <string name="update">Update</string>
    <string name="net_total">Net Total</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="checkout">CHECKOUT</string>
    <string name="review">Review</string>
    <string name="brand_products">Brand Products</string>
    <string name="got_a_question">Got a question? We’d love to hear from you. Send us a message and we’ll respond as soon as possible.</string>
    <string name="send">Send</string>
    <string name="activity_maps">Map</string>
    <string name="add_new_address">Add New Address</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="conform">Confirm</string>
    <string name="your_info">Your Info</string>
    <string name="your_BAg">Your Basket</string>
    <string name="address_book">Address Book</string>
    <string name="change_language">Change Language</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="price_detail">Price Detail :</string>
    <string name="payment_mode">Payment Mode :</string>
    <string name="shipping_adress">Shipping Adress :</string>
    <string name="update_sent_to">Update Sent to :</string>
    <string name="mrp">MRP</string>
    <string name="gst">GST</string>
    <string name="discount">Discount</string>
    <string name="total">Total</string>
    <string name="order_summery">ORDER SUMMARY</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="update_password">Update Password</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="server_client_id">17356877573-e6hk5rl2i0pe7m7v70cjtaqd8hr3cfjp.apps.googleusercontent.com</string>
<!--    <string name="server_client_id">17356877573-eht5a5ca632t00gpngp3vileju364s5c.apps.googleusercontent.com</string>-->

    <string name="facebook_app_id">1384751275018261</string>
    <string name="fb_login_protocol_scheme">fb1384751275018261</string>

    <string name="enter_phone">Pleas enter the phone number</string>
    <string name="vaild_name">Enter a valid name</string>
    <string name="valid_email">Please enter valid email id</string>
    <string name="password_empty">Password cannot empty</string>
    <string name="password_not_same">Confirms Password are not same</string>
    <string name="verify_your_mail">Account Created successfully Please verify your mail id</string>
    <string name="submit">Submit</string>
    <string name="try_lagain">Try Again</string>
    <string name="please_verify_and_add_all_missing_details_if_any">Please verify and add all missing details if any</string>
    <string name="product_not_found">Product Not Found</string>

    <string name="email_or_pass">Email id or password error</string>
    <string name="your_wishlist_is_empty">Your wishlist is empty</string>
    <string name="related_products">Related Products</string>
    <string name="not_here">Item Not Available</string>
    <string name="sign_out_and">Please Sing Out and Sign in</string>
    <string name="you_bag_is_empty_add_one_and_start_shopping">You bag is empty,add one and start shopping</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort </string>
    <string name="sort_by">Sort By</string>
    <string name="bestseller">BestSellers</string>
    <string name="add_your_review">Add your Review</string>
    <string name="send_review">Send Review</string>
    <string name="write_your_review">Write your review</string>
    <string name="title">Title</string>
    <string name="cancel">Cancel</string>
    <string name="field_requirend">This Field is required</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="permission_nessary">Permission necessary</string>
    <string name="sotrageis_improtant">READ EXTERNAL STORAGE permission is necessary to write event!!!</string>
    <string name="enter_message">Enter A Message</string>
    <string name="pass_not_match">Confirm password does not match!</string>
    <string name="select_tome_of_delivery">Select Time of Delivery</string>
    <string name="place_order">Place Order</string>
    <string name="city">City</string>
    <string name="email">Email</string>
    <string name="add_a_new_address">Add a new address</string>
    <string name="edit_address">Edit Address</string>
    <string name="order_id">Order Id</string>
    <string name="date">Date</string>
    <string name="price">Price</string>
    <string name="empty">Empty</string>
    <string name="invalid_phone">Invalid Phone Number</string>
    <string name="eight_character">At Least 8 Character</string>
    <string name="color">Color</string>
    <string name="price_range">Price Range</string>
    <string name="whats_new">Whats new</string>
    <string name="price_high_to_low">Price - High to Low</string>
    <string name="price_low_to_high">Price - Low to High</string>
    <string name="add_to_cart">Add To Basket</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="No_internet_connection">No internet connection</string>
    <string name="cart_empty">Basket is empty</string>
    <string name="building_number">Building Number</string>
    <string name="zone">Zone</string>
    <string name="street">Street</string>
    <string name="select_city">Select City</string>
    <string name="valid_building">Enter A Valid Building Number</string>
    <string name="valid_zone">Enter A Valid zone</string>
    <string name="valid_city">Enter A Valid Street Name</string>
    <string name="ok">OK</string>
    <string name="please_enter_your_email_id">Please Enter Your Email Id</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="skip">Skip</string>
    <string name="out_of_stock">Out Of Stock</string>
    <string name="shipping_amount">Shipping Amount</string>
    <string name="message">Message</string>
    <string name="cart">Basket</string>
    <!--    <string name="add_">Out Of Stock</string>-->
</resources>
