<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/len_filter"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/white"
    app:behavior_hideable="false"
    app:behavior_peekHeight="100dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:text="@string/sort_by"
        android:layout_weight="0.1"
        android:layout_margin="10dp"
        android:textSize="16dp"/>
    <TextView
        android:id="@+id/txtClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="Clear"
        android:visibility="visible"
        android:layout_margin="10dp"
        android:textSize="16dp"/>
</LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/hash"/>
    <TextView
        android:id="@+id/txt_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/whats_new"
        android:padding="15dp"/>
    <TextView
        android:id="@+id/txt_price_h_t_l"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price_high_to_low"
        android:padding="15dp"/>
    <TextView
        android:id="@+id/txt_price_l_t_h"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price_low_to_high"
        android:padding="15dp"/>

</LinearLayout>
