<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="25dp"
        android:textColor="@color/black"/>
    <RadioButton
        android:id="@+id/lan_english"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/english"
        android:layout_marginTop="20dp"
        android:checked="true"/>
    <RadioButton
        android:id="@+id/lan_arabic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arabic"/>

    <Button
        android:id="@+id/bt_continu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Continue"
        android:background="@drawable/gradient_corenr"
        android:textColor="@color/white"
        android:layout_margin="25dp"/>

</LinearLayout>
