<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:background="@color/backgroundColor"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_your_review"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:layout_margin="10dp"/>
    <RatingBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       />
    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13dp"
        android:textColor="@color/black"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/user_small"
        android:padding="10dp"
        android:hint="@string/title"
        android:drawablePadding="10dp"
        android:textSize="12dp"/>
    <EditText
        android:id="@+id/edit_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/message"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:hint="@string/write_your_review"
        android:drawablePadding="10dp"
        android:textSize="12dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       android:layout_marginTop="20dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0.1"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="5dp"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/txt_send"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/send_review"
                android:textColor="@color/white"
                android:gravity="center"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="0.1"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="5dp">

            <TextView
                android:id="@+id/txt_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:gravity="center"/>
        </android.support.v7.widget.CardView>


    </LinearLayout>



</LinearLayout>
